--- a/force-app/main/default/classes/SOQL.cls
+++ b/force-app/main/default/classes/SOQL.cls
@@ -29,7 +29,7 @@ public with sharing class SOQL {
 	 */
 	//[public | private ] [static] data_type method_name (input parameters) {
 	//  The body of the method
-	private static List<Lead> getAllLeads(){
+	public static List<Lead> getAllLeads(){
 		List<Lead> result  = new List<Lead>();
 		result = [SELECT Id, LastName, Company, Phone, Email FROM Lead];
 		return result;
