--- a/force-app/main/default/classes/SOQL.cls
+++ b/force-app/main/default/classes/SOQL.cls
@@ -162,7 +162,10 @@ public with sharing class SOQL {
 	 * @return A list of Case records.
 	 */
 	public static List<Case> getFilterCaseOrigins() {
-		return null; // Replace null with the variable you used to store the result
+
+		List<Case> result = new List<Case>();
+		result = [SELECT Id, Origin, Subject FROM Case WHERE Origin NOT IN ('Web', 'Email') AND Origin != null];
+		return result; // Replace null with the variable you used to store the result
 	}
 
 	/**
