--- a/force-app/main/default/classes/SOQL.cls
+++ b/force-app/main/default/classes/SOQL.cls
@@ -243,7 +243,12 @@ public with sharing class SOQL {
 	 * @return A list of Opportunities with an Amount greater than 100,000, ordered by CloseDate, and limited to 5 records.
 	 */
 	public static List<Opportunity> getHighValueOpportunities() {
-		return null; // Replace null with the variable you used to store the result
+		List<Opportunity> result = new List<Opportunity>();
+
+		result = [SELECT Id, Name, Amount, CloseDate FROM Opportunity 
+						WHERE Amount > 100000 ORDER BY CloseDate ASC LIMIT 5];
+
+		return result; // Replace null with the variable you used to store the result
 	}
 
 	/**
