--- a/force-app/main/default/classes/SOQL.cls
+++ b/force-app/main/default/classes/SOQL.cls
@@ -340,7 +340,10 @@ public with sharing class SOQL {
 	 * @return An Account record with related Opportunities.
 	 */
 	public static Account getAccountAndOpportunitiesFromAccountId(Id accountId) {
-		return null; // Replace null with the variable you used to store the result
+		Account acct = new Account();
+		acct = [SELECT Id, Name, (SELECT Id, Name FROM Opportunities) 
+					FROM Account WHERE Id = :accountId LIMIT 1];
+		return acct; 
 	}
 
 	/**
