--- a/force-app/main/default/classes/SOQL.cls
+++ b/force-app/main/default/classes/SOQL.cls
@@ -434,7 +434,11 @@ public with sharing class SOQL {
 	 * @return A list of filtered Opportunity
 	 */
 	public static List<Opportunity> getOpportunityDetailsForClosedWon() {
-		return null; // Replace null with the variable you used to store the result
+
+		List<Opportunity> result = new List<Opportunity>();
+		result = [SELECT Id, Name, Account.Name, Owner.Name FROM Opportunity 
+					WHERE StageName = 'Closed Won'];
+		return result; 
 	}
 
 	/**
